--- a/index.html
+++ b/index.html
@@ -2,91 +2,116 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>ILIAS TV 2.0</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <script src="https://unpkg.com/feather-icons"></script>
 </head>
-<body class="h-screen flex flex-col">
+<body class="h-screen flex flex-col bg-slate-900 text-white">
+  <header class="py-4 px-6 flex items-center justify-between bg-slate-800">
+    <div class="flex items-center space-x-3">
+      <div class="p-3 bg-gradient-to-br from-blue-500 to-teal-400 rounded-lg shadow-lg">
+        <i data-feather="tv" class="text-white"></i>
+      </div>
+      <h1 class="text-2xl font-bold">ILIAS TV 2.0</h1>
+    </div>
+    <div id="status" class="hidden px-4 py-2 rounded-full text-sm font-medium"></div>
+  </header>
 
-<!-- Header, sidebar, and player HTML remains the same -->
+  <main class="flex flex-1 overflow-hidden flex-col md:flex-row">
+    <!-- Categories -->
+    <div class="w-full md:w-64 overflow-y-auto bg-slate-800 p-2" id="categories"></div>
+    <!-- Channels -->
+    <div class="w-full md:w-72 overflow-y-auto bg-slate-800 p-2" id="channels"></div>
+    <!-- Player -->
+    <div class="flex-1 flex flex-col">
+      <video id="video" class="w-full h-full bg-black" controls autoplay playsinline></video>
+    </div>
+  </main>
 
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-  feather.replace();
+  <script>
+    const workerUrl = "https://iliastv2.iptvkingg23.workers.dev/";
+    const baseUrl = "http://38gb.pro:80";
+    const username = "1100788991";
+    const password = "14811";
 
-  const username = "1100788991";
-  const password = "14811";
-  const baseApi = "http://38gb.pro:80/player_api.php"; // original server
-  const proxy = "https://corsproxy.io/?"; // free CORS proxy
-
-  let currentChannel = null;
-
-  async function fetchApi(params) {
-    const url = `${proxy}${baseApi}?username=${username}&password=${password}&${params}`;
-    try {
-      const res = await fetch(url);
-      return await res.json();
-    } catch (e) {
-      console.error("API fetch error:", e);
-      return null;
+    function proxied(url) {
+      return workerUrl + "?url=" + encodeURIComponent(url);
     }
-  }
 
-  async function loadCategories() {
-    const categories = await fetchApi("action=get_live_categories");
-    if (!categories) {
-      alert("Failed to load categories");
-      return;
+    function showStatus(text) {
+      const el = document.getElementById("status");
+      if (!text) { el.classList.add("hidden"); return; }
+      el.textContent = text;
+      el.classList.remove("hidden");
+      setTimeout(() => el.classList.add("hidden"), 3000);
     }
-    const catDiv = document.getElementById("categories");
-    catDiv.innerHTML = "";
-    categories.forEach(cat => {
-      const div = document.createElement("div");
-      div.className = "p-3 hover:bg-white/5 cursor-pointer flex items-center";
-      div.textContent = cat.category_name;
-      div.onclick = () => loadChannels(cat.category_id);
-      catDiv.appendChild(div);
-    });
-  }
 
-  async function loadChannels(categoryId) {
-    const channels = await fetchApi(`action=get_live_streams&category_id=${categoryId}`);
-    const chanDiv = document.getElementById("channels");
-    chanDiv.innerHTML = "";
-    if (!channels || channels.length === 0) {
-      chanDiv.innerHTML = "<div class='p-3 text-red-400'>No channels found</div>";
-      return;
+    async function loadCategories() {
+      try {
+        const res = await fetch(proxied(`${baseUrl}/player_api.php?username=${username}&password=${password}&action=get_live_categories`));
+        const categories = await res.json();
+        const div = document.getElementById("categories");
+        div.innerHTML = "";
+        categories.forEach(cat => {
+          const el = document.createElement("div");
+          el.className = "p-2 hover:bg-slate-700 cursor-pointer";
+          el.textContent = cat.category_name;
+          el.onclick = () => loadChannels(cat.category_id);
+          div.appendChild(el);
+        });
+      } catch(e) {
+        console.error(e);
+        showStatus("Error loading categories");
+      }
     }
-    channels.forEach(chan => {
-      const div = document.createElement("div");
-      div.className = "channel-item p-3 cursor-pointer";
-      div.textContent = chan.name;
-      div.onclick = () => playChannel(chan);
-      chanDiv.appendChild(div);
-    });
-  }
 
-  function playChannel(chan) {
-    currentChannel = chan;
-    const video = document.getElementById("video");
-    const streamUrl = `https://corsproxy.io/?${baseApi.replace("player_api.php","")}${chan.stream_id}.m3u8`; 
-    if (Hls.isSupported()) {
-      if (window.hls) { window.hls.destroy(); window.hls = null; }
-      window.hls = new Hls();
-      window.hls.loadSource(streamUrl);
-      window.hls.attachMedia(video);
-      window.hls.on(Hls.Events.MANIFEST_PARSED, () => video.play());
-    } else {
-      video.src = streamUrl;
-      video.play();
+    async function loadChannels(categoryId) {
+      try {
+        const res = await fetch(proxied(`${baseUrl}/player_api.php?username=${username}&password=${password}&action=get_live_streams&category_id=${categoryId}`));
+        const channels = await res.json();
+        const div = document.getElementById("channels");
+        div.innerHTML = "";
+        channels.forEach(chan => {
+          const el = document.createElement("div");
+          el.className = "p-2 hover:bg-slate-700 cursor-pointer";
+          el.textContent = chan.name || chan.stream_display_name || "Channel";
+          el.onclick = () => playChannel(chan);
+          div.appendChild(el);
+        });
+      } catch(e) {
+        console.error(e);
+        showStatus("Error loading channels");
+      }
     }
-  }
 
-  loadCategories();
-});
-</script>
+    function playChannel(chan) {
+      if (!chan || !chan.stream_id) return;
+      const video = document.getElementById("video");
+      const streamUrl = proxied(`${baseUrl}/live/${username}/${password}/${chan.stream_id}.m3u8`);
 
+      if (window.hls) { try { window.hls.destroy(); } catch(e) {} }
+      video.pause(); video.removeAttribute("src"); video.load();
+
+      if (Hls.isSupported()) {
+        window.hls = new Hls({ 
+          liveDurationInfinity: true, 
+          lowLatencyMode: false 
+        });
+        window.hls.loadSource(streamUrl);
+        window.hls.attachMedia(video);
+        video.play().catch(err => console.error("Play error", err));
+      } else if (video.canPlayType("application/vnd.apple.mpegurl")) {
+        video.src = streamUrl;
+        video.play().catch(err => console.error("Native play error", err));
+      } else {
+        showStatus("HLS not supported");
+      }
+    }
+
+    loadCategories();
+    feather.replace();
+  </script>
 </body>
 </html>
